<resources>
    <string name="app_name">OneVault</string>
    <string name="action_settings">Settings</string>
    <string name="fab_onetime">One-Time</string>
    <string name="fab_repeating">Repeating</string>
    <string name="drawer_item_summary">Overview</string>
    <string name="drawer_item_income">Income</string>
    <string name="drawer_item_expense">Expense</string>
    <string name="drawer_item_recurrence">Recurrence</string>
    <string name="drawer_item_tools">Tools</string>
    <string name="drawer_item_ie">Import/Export</string>
    <string name="drawer_item_sync">Sync to Google Drive</string>
    <string name="drawer_item_legal">Legal Notice</string>
    <string name="drawer_item_about">About</string>
    <string name="appbar_clear">Clear fields</string>
    <string name="appbar_settings">Settings</string>
    <string name="appbar_tools">Tools</string>
    <string name="appbar_delete">Delete</string>
    <string name="appbar_attach">Attach</string>
    <string name="appbar_transfer">Transfer</string>
    <string name="appbar_clear_show">Clear</string>
    <string name="appbar_setActive">Set as Active</string>
    <string name="appbar_edit">Edit</string>
    <string name="daidalos_hello">Hello World!</string>
    <string name="daidalos_app_name">aFileDialog</string>
    <string name="daidalos_select">Select</string>
    <string name="daidalos_cancel">Cancel</string>
    <string name="daidalos_ok">OK</string>
    <string name="daidalos_new_file">New</string>
    <string name="daidalos_create_file">Create file</string>
    <string name="daidalos_create_folder">Create folder</string>
    <string name="daidalos_accept">Accept</string>
    <string name="daidalos_enter_file_name">Enter the name of the file that you want to create</string>
    <string name="daidalos_enter_folder_name">Enter the name of the folder that you want to create</string>
    <string name="daidalos_yes">Yes</string>
    <string name="daidalos_no">No</string>
    <string name="daidalos_confirm_select_file">Are you sure that you want to select the file \'$file_name\'?</string>
    <string name="daidalos_confirm_create_file">The file \'$file_name\' do not exists, are you sure that you want to create it?</string>
    <string name="daidalos_confirm_select_folder">Are you sure that you want to select the folder \'$file_name\'?</string>
    <string name="daidalos_confirm_create_folder">The folder \'$file_name\' do not exists, are you sure that you want to create it?</string>
    <string name="btn_income">Add Income</string>
    <string name="btn_expense">Add Expense</string>
    <string name="text_amount">Amount</string>
    <string name="text_paymethod">Payment Method</string>
    <string name="button_save">SAVE</string>
    <string name="KEY_DATE" />
    <string name="pick_date">PICK DATE</string>
    <string name="ref_chck">Reference/Check</string>
    <string name="description">Description</string>
    <string name="tax">Tax</string>
    <string name="quantity">Quantity</string>
    <string name="payee">Payee</string>
    <string name="tags">Tags</string>
    <string name="text_income">Add Income</string>
    <string name="text_expense">Add Expense</string>
    <string name="text_delete">Delete</string>
    <string name="text_save">Save</string>
    <string name="text_edit">Edit</string>
    <string name="text_date">Payment Date</string>
    <string name="text_ref">Check/Ref No.</string>
    <string name="text_description">Description</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_tax">Tax</string>
    <string name="text_payer">Payer</string>
    <string name="text_payee">Payee</string>
    <string name="default_field_num">0</string>
    <string name="text_tags">Tags</string>
    <string name="text_update">Update</string>
    <string name="text_status">Status</string>
    <string name="text_category">Category</string>
    <string name="acc_name">Name</string>
    <string name="acc_desc">Description</string>
    <string name="acc_curr">Currency</string>
    <string name="acc_init">Initial Balance</string>
    <string name="acc_hascc">Has Credit Card</string>
    <string name="acc_limit">Credit Limit</string>
    <string name="text_nopayments">No. of Payments</string>
    <string name="text_frequency">Frequency</string>
    <string name="text_firstdate">First Payment Date</string>
    <string name="text_price_calculator">Price</string>
    <string name="text_discount_calculator">Discount</string>
    <string name="text_bill_calculator">Bill</string>
    <string name="text_split_calculator">Split</string>
    <string name="text_tip_calculator">Tip%</string>
    <string name="text_tax_calculator">Tax</string>
    <string name="text_reset_button">Reset</string>
    <string name="text_ok_button">OK</string>
    <string name="text_cancel_button">Cancel</string>
    <string name="text_plus_button">+</string>
    <string name="text_minus_button">-</string>
    <string name="form_error">Failed! Check some fields.</string>
    <string name="EMPTY_TRANSAC">No transaction at the moment.</string>
    <string name="title_addIncome">Add Income</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_income">Add Income</string>
    <string name="title_activity_accounts_page">Accounts</string>
    <string name="account_name">Name</string>
    <string name="account_desc">Description</string>
    <string name="account_curr">Currency</string>
    <string name="account_init">Initial Balance</string>
    <string name="account_hcc">Credit Card</string>
    <string name="account_lmt">Credit Limit</string>
    <string name="tab">\u0009</string>
    <string name="dialog_ask">Transaction type</string>
    <string name="dialog_oper">Transaction operation</string>
    <string name="dialog_acc">Account operation</string>
    <string name="dialog_income">Income</string>
    <string name="dialog_expense">Expense</string>
    <string name="dialog_recurr">Recurrence</string>
    <string-array name="transac_type">
        <item>Income</item>
        <item>Expense</item>
        <item>Recurring</item>
    </string-array>
    <string-array name="transac_operation">
        <item>Set as Active</item>
        <item>Update</item>
        <item>Delete</item>
    </string-array>
    <string-array name="account_operation">
        <item>Add Account</item>
    </string-array>
    <string-array name="tools_list">
        <item>Calculator</item>
        <item>Tip Calculator</item>
        <item>Currency Converter</item>
        <item>Discount Tax Calculator</item>
    </string-array>
    <string name="title_activity_add_account">Add Account</string>
    <string name="title_activity_update_account">Update account</string>
    <string name="total_text" />
    <string name="calculator_output">0</string>
    <string name="zero">0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">clear</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="multi">*</string>
    <string name="point">.</string>
    <string name="stringnull"> </string>
    <string name="title_activity_accounts_profile">Details</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="title_activity_update_delete">Transaction</string>
    <string name="title_activity_update_income">Transaction</string>
    <string name="title_activity_add_recurring_final">Add recurrence</string>
    <string name="title_activity_update_recurring_final">Transaction</string>
    <string name="title_activity_mod__income">Edit Income</string>
    <string name="title_activity_google_drive">Google Drive</string>
    <string name="title_activity_add__account">New Account</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_profile__exp">Profile</string>
</resources>